--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,9 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.7.0</version>
         <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+          <verbose>true</verbose>
         </configuration>
       </plugin>
       <plugin>
