--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,24 @@
 language: java
+cache: bundler
+
+rvm:
+  - 2.5.3
+
+addons:
+  chrome: stable
 
 services:
   - mysql
+  - docker
 
 before_install:
+  - docker build -t imhungry - < Dockerfile
+  - docker run -d -p "8080":"8080" imhungry
   - mysql -u root < database.sql
-
+  
 before_script:
   - echo "USE mysql;\nUPDATE user SET password=PASSWORD('root') WHERE user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
+
+script:
+  - mvn test -B
+  
