--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,8 @@ before_script:
   - echo "USE mysql;\nUPDATE user SET password=PASSWORD('root') WHERE user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
 
 script:
+  - mvn test jacoco:report
+  - cat /ImHungry2/target/jacoco-ut/jacoco.csv
   - cd cucumber
   - cucumber features/SignUpInOut/SignUpInOut.feature
   - cucumber features/Search/P2_SearchPage.feature
