--- a/.travis.yml
+++ b/.travis.yml
@@ -35,4 +35,4 @@ script:
   - cucumber features/SignUpInOut/SignUpInOut.feature
   - cucumber features/Search/P2_SearchPage.feature
   - cucumber features/Result/P2_ResultsPage.feature
-  
+  - cucumber features/ManageList/P2_ManageList.feature
