--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,11 @@
    		<version>1.0.2</version> 
    		<scope>test</scope> 
 	</dependency>
-	<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+	<dependency>
+	    <groupId>org.owasp.esapi</groupId>
+	    <artifactId>esapi</artifactId>
+	    <version>2.1.0.1</version>
+	</dependency>
 	<dependency>
 	    <groupId>com.google.code.gson</groupId>
 	    <artifactId>gson</artifactId>
